Implement Booking feature.

--- a/src/main/resources/templates/booking/detail/create.html
+++ b/src/main/resources/templates/booking/detail/create.html
@@ -14,7 +14,7 @@
                     <li class="breadcrumb-item"><a th:href="${'/bookings'}">Bookings</a></li>
                     <li class="breadcrumb-item active">Add Detail</li>
                 </ol>
-                <form method="post" th:action="@{/bookings}">
+                <form method="post" th:action="@{/bookings/detail}">
                     <div class="modal-header">
                         <h4 class="modal-title">Create Booking Detail</h4>
                     </div>
@@ -22,7 +22,8 @@
                         <input name="booking.id" th:value="${booking.id}" type="hidden">
                         <div class="form-group">
                             <label>Booking No.</label>
-                            <input class="form-control" disabled name="bookingNo" type="text">
+                            <input class="form-control" disabled name="bookingNo" th:value="${booking.bookingNo}"
+                                   type="text">
                         </div>
                         <div class="form-group">
                             <label>Choose Type</label>
@@ -34,7 +35,7 @@
                         </div>
                         <div class="form-group">
                             <label>Choose Room</label>
-                            <select class="form-control" id="roomId" name="roomId">
+                            <select class="form-control" id="room.id" name="room.id">
                                 <option th:each="room : ${availableRooms}"
                                         th:text="${room.roomNo}" th:value="${room.id}">
                                 </option>
@@ -42,7 +43,7 @@
                         </div>
                         <div class="form-group">
                             <label>Notes</label>
-                            <textarea class="form-control" name="notes"></textarea>
+                            <textarea class="form-control" name="description"></textarea>
                         </div>
 
                     </div>
