--- a/src/main/resources/templates/fragments/sidenav.html
+++ b/src/main/resources/templates/fragments/sidenav.html
@@ -47,9 +47,9 @@
                 <div aria-labelledby="headingTwo" data-parent="#sidenavAccordion"
                      id="collapsePages">
                     <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
-                        <a class="nav-link" th:href="${'/bookings/reserve'}">Reservation</a>
-                        <a class="nav-link" th:href="${'/bookings/checkin'}">Checkin</a>
-                        <a class="nav-link" th:href="${'/bookings/checkout'}">Checkout</a>
+                        <a class="nav-link" th:href="${'/bookings/view/reserve'}">Reservation</a>
+                        <a class="nav-link" th:href="${'/bookings/view/checkin'}">Checkin</a>
+                        <a class="nav-link" th:href="${'/bookings/view/checkout'}">Checkout</a>
                     </nav>
                 </div>
             </div>
