--- a/src/main/resources/templates/guest/list.html
+++ b/src/main/resources/templates/guest/list.html
@@ -61,7 +61,7 @@
                                     <td>
                                         <a class="edit" th:href="@{/bookings?guestId={id}(id=${guest.id})}">
                                             <i class="material-icons" data-toggle="tooltip"
-                                               title="Edit">&#xE254;</i></a>
+                                               title="View Bookings">visibility</i></a>
                                         <a class="edit" th:href="@{/guests/edit/{id}(id=${guest.id})}">
                                             <i class="material-icons" data-toggle="tooltip"
                                                title="Edit">&#xE254;</i></a>
