--- a/src/main/resources/templates/booking/create.html
+++ b/src/main/resources/templates/booking/create.html
@@ -25,6 +25,14 @@
                             <input class="form-control" name="bookingNo" type="text">
                         </div>
                         <div class="form-group">
+                            <label>Choose Type</label>
+                            <select class="form-control" id="type" name="type">
+                                <option th:each="type : ${types}"
+                                        th:text="${type}" th:value="${type}">
+                                </option>
+                            </select>
+                        </div>
+                        <div class="form-group">
                             <label>Choose Room</label>
                             <select class="form-control" id="roomId" name="roomId">
                                 <option th:each="room : ${availableRooms}"
